--- a/wwwroot/static.html
+++ b/wwwroot/static.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" />
     <title>Static Content</title>
 </head>
 
 <body>
-    <h3>This is static content</h3>
+    <h3 class="p-2 bg-primary text-white">This is static content</h3>
 </body>
 
 </html>
